提交打包配置