@@ -71,13 +71,11 @@ detect_os() {
 }
 
 detect_arch() {
-  case "$(uname -m 2>/dev/null || true)" in
+  local arch="$(uname -m 2>/dev/null)"
+  case "$arch" in
     x86_64|amd64) echo "x86_64" ;;
-    arm64|aarch64) echo "arm64" ;;
-    i386|i686) echo "i386" ;;
-    armv7l|armv7) echo "armv7" ;;
-    armv6l|armv6) echo "armv6" ;;
-    *) echo "unknown" ;;
+    arm64|aarch64) echo "aarch64" ;;
+    *) echo "$arch" ;;
   esac
 }
 
@@ -101,21 +99,85 @@ check_process() {
 }
 
 os="$(detect_os)"
-arch="$(detect_arch)"
+os_arch="$(detect_arch)"
 
 APP_HOME="$PRG_DIR"
-# 应用包，搜索 app-<version>.jar包文件，获取最后一个
-APP_JAR_PATTER="app-*.jar"
-APP_JAR=$(ls "$APP_HOME/$APP_JAR_PATTER" 2>/dev/null | tail -n 1)
-# 应用进程PID文件
+CONF_DIR="$APP_HOME/conf"
+EMBED_JAVA_HOME="$APP_HOME/jdk"
 APP_PID_FILE="$APP_HOME/run.pid"
-
 LOGS_DIR="$APP_HOME/logs"
 LOG_FILE="$LOGS_DIR/app.log"
+
+# 应用包，搜索 app-<version>.jar包文件，获取最后一个
+APP_JAR_PATTER="app-*.jar"
+APP_JAR=$(ls "$APP_HOME"/lib/$APP_JAR_PATTERN 2>/dev/null | tail -n 1)
+if [ -z "$APP_JAR" ]; then
+  errorLog "jar file: '$APP_HOME/lib/$APP_JAR_PATTERN' not found."
+  exit 1
+fi
+
 if [ ! -d "$LOGS_DIR" ]; then
   mkdir -p "$LOGS_DIR"
 fi
 
+prepare_jdk() {
+  if [ ! -d "$EMBED_JAVA_HOME" ]; then
+    # 搜索 jdk-linux-*.tar.gz 包文件，获取最后一个(tail -n 1)
+    JDK_FILE_PATTERN="jdk-linux-*.tar.gz"
+    JDK_FILE=$(ls "$APP_HOME"/$JDK_FILE_PATTERN 2>/dev/null | tail -n 1)
+    if [ -f "$JDK_FILE" ]; then
+      tar xzf $JDK_FILE -C $APP_HOME
+    fi
+  fi
+}
+
+check_java() {
+  MIN_JAVA_VERSION=17
+
+  prepare_jdk
+
+  # Embed java command first
+  JAVA_CMD="$EMBED_JAVA_HOME/bin/java"
+  if [ -f "$JAVA_CMD" ]; then
+    chmod +x "$JAVA_CMD"
+  fi
+
+  if [ ! -x "$JAVA_CMD" ]; then
+    if [ -n "$JAVA_HOME" ]; then
+      if [ -x "$JAVA_HOME/jre/sh/java" ]; then
+        # IBM's JDK on AIX
+        JAVA_CMD="$JAVA_HOME/jre/sh/java"
+      else
+        JAVA_CMD="$JAVA_HOME/bin/java"
+      fi
+      if [ ! -x "$JAVA_CMD" ]; then
+        errorLog "JAVA_HOME is set to an invalid directory: '$JAVA_HOME' , no 'java' command could be found in it."
+        exit 1
+      fi
+    else
+      JAVA_CMD=java
+      if ! command -v java >/dev/null 2>&1
+      then
+        errorLog "JAVA_HOME is not set and no 'java' command could be found in your PATH."
+        exit 1
+      fi
+    fi
+  fi
+
+  # 获取 Java 版本信息
+  JAVA_VERSION=$($JAVA_CMD -version 2>&1 | awk -F '"' '/version/ {print $2}')
+  # 检查 Java 版本是否低于 17
+  if [[ "$JAVA_VERSION" =~ ^[0-9]+(\.[0-9]+)(.*)$ ]]; then
+    MAJOR_VERSION=$(echo $JAVA_VERSION | cut -d '.' -f 1)
+    if (( $(printf '%s\n' "$MAJOR_VERSION" | sort -V | head -n 1) < $MIN_JAVA_VERSION )); then
+      errorLog "JDK version must be >=$MIN_JAVA_VERSION, current version: $JAVA_VERSION"
+      exit 1
+    fi
+  else
+    errorLog "Failed to get Java version: $JAVA_VERSION"
+    exit 1
+  fi
+}
 
 start() {
   mem_capacity=$(free -m | grep Mem | awk '{print int($2*0.5)}')
@@ -124,10 +186,11 @@ start() {
   fi
 
   if check_process "$APP_PID_FILE"; then
-    echo "App is already running"
+    warnLog "App is already running"
   else
-    echo "Starting App..."
-    nohup java -server \
+    check_java
+    infoLog "Starting App..."
+    nohup "$JAVA_CMD" -server \
       --add-opens=java.base/java.io=ALL-UNNAMED \
       --add-opens=java.base/java.lang=ALL-UNNAMED \
       --add-opens=java.base/java.lang.ref=ALL-UNNAMED \
@@ -152,7 +215,15 @@ start() {
       --add-opens=java.base/sun.net.dns=ALL-UNNAMED \
       --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED \
       --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-      -XX:+UseG1GC -Xms${mem_capacity}m -Xmx${mem_capacity}m \
+      -Xms${mem_capacity}m -Xmx${mem_capacity}m -XX:+UseG1GC \
+      -XX:ReservedCodeCacheSize=256m -XX:InitialCodeCacheSize=256m \
+      -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m -XX:MaxDirectMemorySize=2g \
+      -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=45 \
+      -XX:ConcGCThreads=4 -XX:ParallelGCThreads=8 -XX:+UseStringDeduplication -XX:+AlwaysPreTouch -XX:+ParallelRefProcEnabled \
+      -XX:+DisableExplicitGC -Xlog:gc*,safepoint,gc+age=info:file=${LOGS_DIR}/gc-%t.log:time,level,tid,tags:filecount=5,filesize=50m \
+      -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${LOGS_DIR}/oom.dump \
+      -Dlog.level=INFO -Dlog.target=file -Duser.timezone=Asia/Shanghai -Dfile.encoding=UTF-8 \
+      -Dapp.home="$APP_HOME" -Dconf.path="${CONF_DIR}" \
       -jar "$APP_JAR" --spring.config.additional-location="optional:file:${APP_HOME}/application.properties" > "$LOG_FILE" >/dev/null 2>&1 &
     echo $! > "$APP_PID_FILE"
 
@@ -169,16 +240,16 @@ start() {
     done
 
     if check_process "$APP_PID_FILE"; then
-      echo "App started successfully"
+      successLog "App started successfully"
     else
-      echo "App start failed, see log: $LOG_FILE"
+      errorLog "App start failed, see log: $LOG_FILE"
     fi
   fi
 }
 
 stop() {
   if check_process "$APP_PID_FILE"; then
-    echo "Stopping App..."
+    infoLog "Stopping App..."
     kill "$(cat "$APP_PID_FILE")"
     sleep 2
 
@@ -197,20 +268,20 @@ stop() {
       kill -9 "$(cat "$APP_PID_FILE")"
       sleep 2
       if check_process "$APP_PID_FILE"; then
-        echo "App stop failed"
+        errorLog "App stop failed"
         return 1
       else
-        echo "App stopped"
+        successLog "App stopped"
         rm -f "$APP_PID_FILE"
         return 0
       fi
     else
-      echo "App stopped"
+      successLog "App stopped"
       rm -f "$APP_PID_FILE"
     fi
     return 0
   else
-    echo "App is not running"
+    warnLog "App is not running"
     return 1
   fi
 }
@@ -223,9 +294,9 @@ restart() {
 
 status() {
   if check_process "$APP_PID_FILE"; then
-    echo "App is running"
+    successLog "App is running"
   else
-    echo "App is not running"
+    warnLog "App is not running"
   fi
 }
 
